# pyrene

./: Makefile  README  README.md  README.rst  README.txt  TODO  paix.py  requirements.txt  setup.cfg  test-requirements.txt  test_paix.py  tox.ini  upload.py
docs/: commands.md
pyrene/: constants.py  main.py  network.py  repomanager.py  repos.py  shell.py  upload.py  util.py
pyrene/tests/: test_network.py  test_repomanager.py  test_repos.py  test_shell.py  test_util.py  util.py
reponet/: __init__.py  main.py  repomanager.py  repos.py  util.py
reponet/tests/: test_paix.py  test_repomanager.py  test_reponet.py  test_repos.py  test_util.py
