[metadata]
name = pyrene
version = 0.0.1
author = Krisztián Fekete
author-email = fekete.krisztyan@gmail.com
summary = Copy packages between multiple python package repositories
description-file = README
license = MIT

[files]
modules = pipconf

[entry_points]
console_scripts =
    pyrene = pyrene.main:main
