[metadata]
name = pyrene
version = 0.1.0
author = Krisztián Fekete
author-email = fekete.krisztyan@gmail.com
home-page = https://github.com/krisztianfekete/pyrene
summary = Copy packages between multiple python package repositories
description-file = README
license = MIT, with some parts under Apache
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Environment :: Console
    Operating System :: POSIX
    License :: OSI Approved
    Programming Language :: Python
    Topic :: Utilities
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Installation/Setup


[entry_points]
console_scripts =
    pyrene = pyrene.main:main
